first design for the team up

--- a/static/css/start.css
+++ b/static/css/start.css
@@ -226,3 +226,9 @@ h1 {
 .full-size {
   width: 100%;
 }
+
+.two-column-grid {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  column-gap: 20px;
+}
