--- a/templates/login.html
+++ b/templates/login.html
@@ -6,14 +6,14 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/login" method="post">
-        <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
+    <form action="/login" method="post" class="form">
+        <div class="textfield">
+            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text" >
         </div>
-        <div class="form-group">
-            <input class="form-control" name="password" placeholder="Password" type="password">
+        <div class="textfield">
+            <input class="form-control" name="password" placeholder="Password" type="password" >
         </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
+        <button id="login-btn" class="btn-primary" type="submit">Log In</button>
     </form>
-    <a href="/register">Registrieren</a>
+    <a class="btn-text"  href="/register">Registrieren</a>
 {% endblock %}
