--- a/templates/loginTemplate.html
+++ b/templates/loginTemplate.html
@@ -2,9 +2,11 @@
 <html>
     <header>
         <title>{% block title %} {% endblock %} </title>
+        <link rel="stylesheet" href="../static/css/start.css">
+        <link href="../static/growth.png" rel="icon">
     </header>
     <body>
-        <h1>PTT</h1>
+        <h1 class="extra-big-font">PTT</h1>
         {% block main %} {% endblock %}
     </body>
 </html>
