--- a/templates/register.html
+++ b/templates/register.html
@@ -6,20 +6,20 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/register" method="post">
-        <div class="form-group">
+    <form action="/register" method="post" class="form">
+        <div class="textfield">
             <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
         </div>
-        <div class="form-group">
+        <div class="textfield">
             <input class="form-control" name="email" placeholder="E-Mail" type="text">
         </div>
-        <div class="form-group">
+        <div class="textfield">
             <input class="form-control" name="password" placeholder="Password" type="password">
         </div>
-        <div class="form-group">
+        <div class="textfield">
             <input class="form-control" name="confirmation" placeholder="Confirm Password" type="password">
         </div>
-        <button class="btn btn-primary" type="submit">Register</button>
+        <button id="login-btn" class="btn btn-primary" type="submit">Register</button>
     </form>
-    <a href="/login">Login</a>
+    <a class="btn-text" href="/login">Login</a>
 {% endblock %}
