--- a/templates/friends/friends.html
+++ b/templates/friends/friends.html
@@ -10,7 +10,7 @@
     
     <div class="container-horizontal space-around"> 
         <h1 class="left-align big-font">Current Friends:</h1>
-        <div class="btn-primary"><a href="/friends/search">Neue Freunde suchen</a></div>
+        <a class="btn-primary" href="/friends/search">Neue Freunde suchen</a>
     </div>
     {% for score, username in friends %}
     <div class="entry3" >
