--- a/templates/tasks/tasks.html
+++ b/templates/tasks/tasks.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="container-horizontal space-around"> 
             <h1 class="left-align big-font">Current Tasks:</h1>
-            <div class="btn-primary"><a href="/tasks/add">Add New Task</a></div>
+            <a href="/tasks/add" class="btn-primary">Add New Task</a>
         </div>
        
         {% for task in tasks %}
