--- a/static/css/start.css
+++ b/static/css/start.css
@@ -106,7 +106,8 @@ header nav ul li a:hover:after {
   border-radius: 10px;
   text-decoration: none;
   border: 2px solid grey;
-  background-color: #dddddd;
+  background-color: #858585;
+  color: white;
   height: 100%;
 }
 
@@ -117,7 +118,6 @@ header nav ul li a:hover:after {
 }
 
 a:visited {
-  color: black;
   text-decoration: none;
 }
 a {
@@ -133,6 +133,7 @@ a {
 
 .btn-primary:hover {
   background-color: white;
+  color: #858585;
 }
 
 .btn-text:hover {
@@ -256,5 +257,9 @@ h1 {
 
 #login-btn {
   font-size: 1.5em;
+  width: 50%;
+}
+
+.half-size {
   width: 50%;
 }
