--- a/templates/challenges/searchResults.html
+++ b/templates/challenges/searchResults.html
@@ -6,14 +6,21 @@
 {% endblock %}
 
 {% block main %}
-    Screen for Search Results Challenges
+<div class="container">
     {%for result in results %}
-        <div>
-            <h2>{{result.username}}</h2>
-            <form action="/challenges/search/results" method="POST">
-                <input type="hidden" name="username" value="{{result.username}}" >
-                <button type="submit" >Send Request</button>
-            </form>
+        <div class="entry2">
+            <div class="align-content-left">
+                <p>{{result.username}}</h2>
+            </div>
+            <div class="align-content-right">
+                <form action="/challenges/search/results" method="POST">
+                    <div class="textfield">
+                        <input type="hidden" name="username" value="{{result.username}}" >
+                    </div>
+                    <button class="btn-text " type="submit" >Send Request</button>
+                </form>
+            </div>
         </div>
     {%endfor%}
+</div>
 {% endblock %}
