changed button type to text on search results

--- a/templates/friends/searchResults.html
+++ b/templates/friends/searchResults.html
@@ -15,7 +15,7 @@
         <div class="align-content-right">
             <form action="/friends/add" method="GET" >
                 <input type="hidden" name="username" value="{{user.username}}" > 
-                <button type="submit" class="btn-small" >Hinzufügen</button>
+                <button type="submit" class="btn-text" >Hinzufügen</button>
             </form>
         </div>
     </div>
