--- a/templates/profiles/profile.html
+++ b/templates/profiles/profile.html
@@ -6,22 +6,28 @@
 {% endblock %}
 
 {% block main %}
-    Screen for Profile
-    <h1>{{username}}</h1>
-    <h2>{{score}}</h2>
+    <p class="big-font">{{username}}</p>
+    <p class="btn-font">Score: {{score}}</p>
     {%if own_profile%}
-        <a href="/profile/edit">Edit</a>
+        <a class="btn-primary half-size" href="/profile/edit">Edit</a>
     {% endif %}
+
     {% if friend %}
-    <form method="POST" action="/friends/delete">
+    <form method="GET" action="/friends/teamUp" class="form">
+        <input type="hidden" name="username_friend" value="{{username}}" >
+        <button type="submit" class="btn-primary half-size">View his tasks</button>
+    </form>
+
+    <form method="POST" action="/friends/delete" class="form">
         <input type="hidden" name="username" value="{{username}}">
-        <button type="submit">Delete friend</button>
+        <button type="submit" class="btn-text half-size">Delete friend</button>
     </form>
     {% endif %}
+
     {% if not friend %}
-    <form action="/friends/add" method="GET">
+    <form action="/friends/add" method="GET" class="form">
         <input type="hidden" name="username" value="{{username}}" > 
-        <button type="submit" >Send friend requests</button>
+        <button type="submit" class="btn-primary half-size" >Send friend requests</button>
     </form>
     {% endif %}
 {% endblock %}
