designed the profile edit

--- a/templates/profiles/edit.html
+++ b/templates/profiles/edit.html
@@ -6,13 +6,12 @@
 {% endblock %}
 
 {% block main %}
-    Screen for Edit Profile
-    <form method="POST" action="/profile/edit">
-        <input type="email" placeholder="Neue E-Mail Adresse" name="email" />
-        <input type="password" placeholder="Neues Password" name="password" />
-        <input type="password" placeholder="Bestätige neues Password" name="confirm_password" />
-        <input type="password" placeholder="Aktuelles Password" name="current_password" />
-        <input type="username" placeholder="Neuer Username" name="username" />
-        <button type="submit" >Submit</button>
+    <form method="POST" action="/profile/edit" class="form">
+        <div class="textfield"><input type="email" placeholder="Neue E-Mail Adresse" name="email" /></div>
+        <div class="textfield"><input type="password" placeholder="Neues Password" name="password" /></div>
+        <div class="textfield"><input type="password" placeholder="Bestätige neues Password" name="confirm_password" /></div>
+        <div class="textfield"><input type="password" placeholder="Aktuelles Password" name="current_password" /></div>
+        <div class="textfield"><input type="username" placeholder="Neuer Username" name="username" /></div>
+        <button class="btn-primary half-size btn-font" type="submit" >Submit</button>
     </form>
 {% endblock %}
