--- a/templates/challenges/history.html
+++ b/templates/challenges/history.html
@@ -6,13 +6,24 @@
 {% endblock %}
 
 {% block main %}
-    Screen for Challenge History
+<div class="container">
     {%for id, first_score, second_score, first_user, second_user, date in challenges%}
-    <div class="entry">
-        <h3>{{first_user}} vs. {{second_user}}</h3>
-        <h4>{{first_score}} - {{second_score}}</h4>
-        <h5> {{date}}</h5>
+    <div class="entry3">
+        <div class="container-horizontal">
+            <p>{{first_user}}</p>
+            <p class="font-marker margin-lr"> vs. </p>
+            <p>{{second_user}}</p>
+        </div>
+        <p>Score: {{first_score}} : {{second_score}}</p>
+        <div class="container-horizontal align-content-right">
+            <p class="margin-lr">Expired: {{date}}</p>
+            <form action="/challenges/details" method="GET">
+                <input type="hidden" name="challenge_id" value={{id}}>
+                <button type="submit"  class="btn-text">Details</button>
+            </form>
+        </div>
     </div>
     {%endfor%}
-    <a href="/challenges">Challenges</a>
+    <a class="btn-primary half-size btn-font" href="/challenges">Challenges</a>
+</div>
 {% endblock %}
