--- a/static/css/start.css
+++ b/static/css/start.css
@@ -114,6 +114,7 @@ header nav ul li a:hover:after {
 .btn-text {
   background-color: transparent;
   border: none;
+  color: black;
   text-decoration: underline;
 }
 
