some minor design fixes

--- a/templates/friends/friends.html
+++ b/templates/friends/friends.html
@@ -58,8 +58,10 @@
     </div>
     {% endif %}
     {% for name in pending_requests %}
-    <div class="entry3">
-        <p>{{name}}</p>
+    <div class="entry2">
+        <div class="align-content-left">   
+            <p>{{name}}</p>
+        </div>
     </div>
 
         
