--- a/templates/challenges/history.html
+++ b/templates/challenges/history.html
@@ -9,7 +9,7 @@
 <div class="container">
     {%for id, first_score, second_score, first_user, second_user, date in challenges%}
     <div class="entry3">
-        <div class="container-horizontal">
+        <div class="container-horizontal container-horizontal-mobile mobile-center">
             <p>{{first_user}}</p>
             <p class="font-marker margin-lr"> vs. </p>
             <p>{{second_user}}</p>
