--- a/templates/challenges/overview.html
+++ b/templates/challenges/overview.html
@@ -7,13 +7,13 @@
 
 {% block main %}
 <div class="container">
-    <div class="container-horizontal space-around"> 
+    <div class="container-horizontal space-around "> 
         <h1 class="left-align big-font">Challenge Overview:</h1>
         <a class="btn-primary" href="/challenges/search">New Challenge</a>
     </div>
     {%for id, first_score, second_score, first_user, second_user, date in challenges%}
     <div class="entry3">
-        <div class="container-horizontal">
+        <div class="container-horizontal container-horizontal-mobile mobile-center">
             <p>{{first_user}}</p>
             <p class="font-marker margin-lr"> vs. </p>
             <p>{{second_user}}</p>
