--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
     <div class="left-align"><h1>Challenges:</h1></div>
     {%for id, first_score, second_score, first_user, second_user, date in challenges%}
     <div class="entry3">
-        <div class="container-horizontal">
+        <div class="container-horizontal container-horizontal-mobile mobile-center">
             <p>{{first_user}}</p>
             <p class="font-marker margin-lr"> vs. </p>
             <p>{{second_user}}</p>
