added a line to seperate the header

--- a/templates/template.html
+++ b/templates/template.html
@@ -21,6 +21,7 @@
                     <li><a href="/profile">Profile</a></li>
                     <li><a href="/scoreboard/monthly">Scoreboard</a></li>
                 </ul>
+                <div class="line"></div>
             </nav>
         </header>
         <main class="container-main">
