--- a/static/css/start.css
+++ b/static/css/start.css
@@ -281,6 +281,11 @@ h1 {
   background-color: lightgrey;
   border-radius: 10px;
 }
+.line {
+  background-color: black;
+  height: 3px;
+  width: 100%;
+}
 
 @media (max-width: 576px) {
   * {
