--- a/templates/template.html
+++ b/templates/template.html
@@ -38,10 +38,14 @@
         <main class="container-main">
             {% block main %}{% endblock %}
         </main>
-        <br><br><br><br><br><br><br>
-        <a href="/logout">Logout</a>
+        
+       
 
     </body>
+    <footer>
+        <div class="line"></div>
+        <a class="btn-text" href="/logout">Logout</a> 
+    </footer>
 
     <script>
         function myFunction() {
