--- a/templates/loginTemplate.html
+++ b/templates/loginTemplate.html
@@ -6,7 +6,7 @@
         <link href="../static/growth.png" rel="icon">
     </header>
     <body>
-        <h1 class="extra-big-font">PTT</h1>
+        <h1 class="extra-big-font">EXAC</h1>
         {% block main %} {% endblock %}
     </body>
 </html>
