--- a/static/css/start.css
+++ b/static/css/start.css
@@ -112,8 +112,8 @@ header nav p:hover:after {
   padding: 10px 5px 10px 5px;
   border-radius: 10px;
   text-decoration: none;
-  border: 2px solid grey;
-  background-color: #858585;
+  border: 2px solid rgb(124, 124, 124);
+  background-color: #b3b3b3;
   color: white;
   height: 100%;
 }
@@ -122,7 +122,6 @@ header nav p:hover:after {
   background-color: transparent;
   border: none;
   color: black;
-  text-decoration: underline;
 }
 
 a:visited {
@@ -140,12 +139,14 @@ a {
 }
 
 .btn-primary:hover {
+  transition: 300ms;
   background-color: white;
   color: #858585;
 }
 
 .btn-text:hover {
-  text-decoration: none;
+  text-decoration: underline;
+  color: rgb(29, 58, 153);
 }
 
 .entry3 {
@@ -231,7 +232,7 @@ h1 {
 }
 
 .big-font {
-  font-size: 2em;
+  font-size: 1.8em;
 }
 
 .extra-big-font {
@@ -271,8 +272,136 @@ h1 {
 }
 
 .btn-font {
+  padding: 1em;
   font-size: 1.5em;
 }
+
+.profile-pic {
+  padding: 1em;
+  height: 12em;
+}
+
+#q-graph {
+  display: block; 
+  position: relative; 
+  width: 600px; 
+  height: 300px;
+  margin: 1.1em 0 0; 
+  padding: 0;
+  background: transparent;
+  font-size: 11px;
+}
+
+#q-graph caption {
+  caption-side: top; 
+  width: 600px;
+  text-transform: uppercase;
+  letter-spacing: .5px;
+  top: -40px;
+  position: relative; 
+  z-index: 10;
+  font-weight: bold;
+}
+
+#q-graph tr, #q-graph th, #q-graph td { 
+  position: absolute;
+  bottom: 0; 
+  width: 150px; 
+  z-index: 2;
+  margin: 0; 
+  padding: 0;
+  text-align: center;
+}
+
+#q-graph td {
+  transition: all .3s ease;
+}
+  
+#q-graph thead tr {
+  left: 100%; 
+  top: 50%; 
+  bottom: auto;
+  margin: -2.5em 0 0 5em;}
+#q-graph thead th {
+  width: 7.5em; 
+  height: auto; 
+  padding: 0.5em 1em;
+}
+#q-graph thead th.sent {
+  top: 0; 
+  left: 0; 
+  line-height: 2;
+}
+#q-graph thead th.paid {
+  top: 2.75em; 
+  line-height: 2;
+  left: 0; 
+}
+
+#q-graph tbody tr {
+  height: 296px;
+  padding-top: 2px;
+  border-right: 1px dotted #C4C4C4; 
+  color: #AAA;
+}
+#q-graph #q1 {
+  left: 0em;
+  
+}
+#q-graph #q2 {left: 150px;}
+#q-graph #q3 {left: 300px;}
+#q-graph #q4 {left: 450px; border-right: none;}
+#q-graph tbody th {bottom: -1.75em; vertical-align: top;
+font-weight: normal; color: rgb(78, 78, 78);}
+#q-graph .bar {
+  width: 60px; 
+  border: 1px solid; 
+  border-bottom: none; 
+  color: rgb(255, 255, 255);
+}
+#q-graph .bar p {
+  margin: 5px 0 0; 
+  padding: 0;
+  opacity: 0.4;
+  color: black;
+}
+#q-graph .sent {
+  left: 13px; 
+  background-color: color-sent;
+  border-color: transparent;
+}
+#q-graph .paid {
+  left: 77px; 
+  background-color: color-paid;
+  border-color: transparent;
+}
+
+
+#ticks {
+  position: relative; 
+  top: -300px; 
+  left: 2px;
+  width: 596px; 
+  height: 300px; 
+  z-index: 1;
+  margin-bottom: -300px;
+  font-size: 10px;
+  font-family: "fira-sans-2", Verdana, sans-serif;
+}
+
+#ticks .tick {
+  position: relative; 
+  border-bottom: 1px dotted #C4C4C4; 
+  width: 600px;
+}
+
+#ticks .tick p {
+  position: absolute; 
+  left: -5em; 
+  top: -0.8em; 
+  margin: 0 0 0 0.5em;
+}
+View Compiled
 
 .half-size {
   width: 50%;
