--- a/static/css/start.css
+++ b/static/css/start.css
@@ -452,15 +452,13 @@ header nav a.icon :after {
 }
 
 footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   background-color: lightgrey;
-  height: 200px;
+  padding-bottom: 200px;
 }
 
 @media (max-width: 1100px) {
