--- a/templates/tasks/tasks.html
+++ b/templates/tasks/tasks.html
@@ -14,7 +14,7 @@
        
         {% for task in tasks %}
             <!-- There are the following fields in every task that are helpful: name and due date -->
-            <div class="entry3">
+            <div class="entry3 entry">
                 <div class="align-content-left">
                     <p>{{task.name}}</p>
                 </div>
