--- a/templates/challenges/history.html
+++ b/templates/challenges/history.html
@@ -8,7 +8,7 @@
 {% block main %}
 <div class="container">
     {%for id, first_score, second_score, first_user, second_user, date in challenges%}
-    <div class="entry3">
+    <div class="entry3 entry">
         <div class="container-horizontal container-horizontal-mobile mobile-center">
             <p>{{first_user}}</p>
             <p class="font-marker margin-lr"> vs. </p>
