--- a/templates/challenges/searchResults.html
+++ b/templates/challenges/searchResults.html
@@ -8,7 +8,7 @@
 {% block main %}
 <div class="container">
     {%for result in results %}
-        <div class="entry2">
+        <div class="entry2 entry">
             <div class="align-content-left">
                 <p>{{result.username}}</h2>
             </div>
