--- a/templates/friends/searchResults.html
+++ b/templates/friends/searchResults.html
@@ -8,7 +8,7 @@
 {% block main %}
 <div class="container" >
     {% for user in users %}
-    <div class="entry2">
+    <div class="entry2 entry">
         <div class="align-content-left">
             <p>{{user.username}}</p>
         </div>
