--- a/templates/friends/teamUp.html
+++ b/templates/friends/teamUp.html
@@ -13,7 +13,7 @@
                 <h1 class="left-align big-font">{{friend.username}}s tasks:</h1>
             </div>
             {% for task in friend_tasks %}
-            <div class="entry2">
+            <div class="entry2 entry">
                 <div class="align-content-left"><p> {{task.name}}</p></div>
                 <div class="align-content-right"><p>Due: {{task.due}}</p></div> 
             </div>
@@ -25,7 +25,7 @@
                 <h1 class="left-align big-font">Your Tasks:</h1>
             </div> 
             {%for task in user_tasks %}
-            <div class="entry2">
+            <div class="entry2 entry">
                 <div class="align-content-left"><p> {{task.name}}</p></div>
                 <div class="align-content-right"><p>Due: {{task.due}}</p></div> 
             </div>
