--- a/templates/template.html
+++ b/templates/template.html
@@ -14,7 +14,7 @@
         <header class="header">
             <nav id="myTopnav" class="topnav">
                 <div class="mobile-nav">
-                    <h1 class="title">EXAC</h1>
+                    <a href="/"><h1 class="title">EXAC</h1></a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <div class="bar"></div>
                     <div class="bar"></div>
