--- a/templates/index.html
+++ b/templates/index.html
@@ -3,26 +3,26 @@
 {% block title %} Dashboard {% endblock %}
 
 {% block main %}
-<div class="container">
+<div class="container"> 
     {%if tasks %}
     <div class="left-align"> <h1 >Your current Tasks: </h1></div>
     {% for task in tasks %}
-    <div class="entry entry2">
-        <div class="align-content-left">
-            {{task.name}}
-        </div>
-        <div class="container-horizontal align-content-right">
-            <p class="margin-lr">{{task.due}}</p>
-            <form method="POST" action="/tasks">
-                <input type="hidden" value={{task.id}} name="id">
-                <button class="btn-text margin-lr" type="submit">Erledigt</button>
-            </form>
-            <form method="GET" action="/tasks/edit">
-                <input type="hidden" value={{task.id}} name="id">
-                <button class="btn-text margin-lr" type="submit">Edit</button>
-            </form>
-        </div>
-    </div>
+    <form method="GET" action="/tasks/edit" style="width: 100%" id="{{task.id}}">
+        <a class="entry entry2" onClick="document.getElementById('{{task.id}}').submit();">
+            <div class="align-content-left">
+                    <input type="hidden" value={{task.id}} name="id">
+                    <button class="btn-text margin-lr" type="submit">{{task.name}}</button>
+        
+            </div>
+            <div class="container-horizontal align-content-right">
+                <p class="margin-lr"><time>{{task.due}}</time></p>
+                <form method="POST" action="/tasks">
+                    <input type="hidden" value={{task.id}} name="id">
+                    <button class="btn-text margin-lr check" type="submit" >✓</button>
+                </form>
+            </div>
+        </a>
+    </form>
     {% endfor %}
     <a class="btn-text" href="/tasks">View All Tasks</a>
     {% endif %}
